.metadata/.plugins/org.eclipse.cdt.ui/Clase9_ej7.build.log
22:14:55 **** Incremental Build of configuration Debug for project Clase9_ej7 ****
make all 
Building file: ../src/Clase7_ej2.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Clase7_ej2.d" -MT"src/Clase7_ej2.o" -o "src/Clase7_ej2.o" "../src/Clase7_ej2.c"
In file included from /usr/include/stdio.h:33:0,
                 from ../src/Clase7_ej2.c:12:
/usr/lib/gcc/x86_64-linux-gnu/7/include/stddef.h:216:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘typedef’
 typedef __SIZE_TYPE__ size_t;
 ^~~~~~~
In file included from /usr/include/stdio.h:41:0,
                 from ../src/Clase7_ej2.c:12:
/usr/include/x86_64-linux-gnu/bits/libio.h:306:3: error: unknown type name ‘size_t’
   size_t __pad5;
   ^~~~~~
/usr/include/x86_64-linux-gnu/bits/libio.h:309:67: error: ‘size_t’ undeclared here (not in a function); did you mean ‘__size_t’?
   char _unused2[15 * sizeof (int) - 4 * sizeof (void *) - sizeof (size_t)];
                                                                   ^~~~~~
                                                                   __size_t
/usr/include/x86_64-linux-gnu/bits/libio.h:337:62: error: expected declaration specifiers or ‘...’ before ‘size_t’
 typedef __ssize_t __io_read_fn (void *__cookie, char *__buf, size_t __nbytes);
                                                              ^~~~~~
/usr/include/x86_64-linux-gnu/bits/libio.h:346:6: error: expected declaration specifiers or ‘...’ before ‘size_t’
      size_t __n);
      ^~~~~~
/usr/include/x86_64-linux-gnu/bits/libio.h:467:19: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘_IO_sgetn’
 extern _IO_size_t _IO_sgetn (_IO_FILE *, void *, _IO_size_t);
                   ^~~~~~~~~
In file included from ../src/Clase7_ej2.c:12:0:
/usr/include/stdio.h:278:35: error: expected declaration specifiers or ‘...’ before ‘size_t’
 extern FILE *fmemopen (void *__s, size_t __len, const char *__modes)
                                   ^~~~~~
/usr/include/stdio.h:284:47: error: expected declaration specifiers or ‘...’ before ‘size_t’
 extern FILE *open_memstream (char **__bufloc, size_t *__sizeloc) __THROW __wur;
                                               ^~~~~~
/usr/include/stdio.h:295:20: error: expected declaration specifiers or ‘...’ before ‘size_t’
       int __modes, size_t __n) __THROW;
                    ^~~~~~
/usr/include/stdio.h:301:10: error: expected declaration specifiers or ‘...’ before ‘size_t’
          size_t __size) __THROW;
          ^~~~~~
/usr/include/stdio.h:340:44: error: expected declaration specifiers or ‘...’ before ‘size_t’
 extern int snprintf (char *__restrict __s, size_t __maxlen,
                                            ^~~~~~
/usr/include/stdio.h:344:45: error: expected declaration specifiers or ‘...’ before ‘size_t’
 extern int vsnprintf (char *__restrict __s, size_t __maxlen,
                                             ^~~~~~
/usr/include/stdio.h:604:11: error: expected declaration specifiers or ‘...’ before ‘size_t’
           size_t *__restrict __n, int __delimiter,
           ^~~~~~
/usr/include/stdio.h:607:9: error: expected declaration specifiers or ‘...’ before ‘size_t’
         size_t *__restrict __n, int __delimiter,
         ^~~~~~
/usr/include/stdio.h:617:8: error: expected declaration specifiers or ‘...’ before ‘size_t’
        size_t *__restrict __n,
        ^~~~~~
/usr/include/stdio.h:646:15: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘fread’
 extern size_t fread (void *__restrict __ptr, size_t __size,
               ^~~~~
/usr/include/stdio.h:652:15: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘fwrite’
 extern size_t fwrite (const void *__restrict __ptr, size_t __size,
               ^~~~~~
/usr/include/stdio.h:673:15: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘fread_unlocked’
 extern size_t fread_unlocked (void *__restrict __ptr, size_t __size,
               ^~~~~~~~~~~~~~
/usr/include/stdio.h:675:15: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘fwrite_unlocked’
 extern size_t fwrite_unlocked (const void *__restrict __ptr, size_t __size,
               ^~~~~~~~~~~~~~~
In file included from ../src/Clase7_ej2.c:13:0:
/usr/include/stdlib.h:97:15: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘__ctype_get_mb_cur_max’
 extern size_t __ctype_get_mb_cur_max (void) __THROW __wur;
               ^~~~~~~~~~~~~~~~~~~~~~
In file included from ../src/Clase7_ej2.c:13:0:
/usr/include/stdlib.h:411:4: error: expected declaration specifiers or ‘...’ before ‘size_t’
    size_t __statelen) __THROW __nonnull ((2));
    ^~~~~~
/usr/include/stdlib.h:441:4: error: expected declaration specifiers or ‘...’ before ‘size_t’
    size_t __statelen,
    ^~~~~~
src/subdir.mk:24: recipe for target 'src/Clase7_ej2.o' failed
/usr/include/stdlib.h:539:22: error: expected declaration specifiers or ‘...’ before ‘size_t’
 extern void *malloc (size_t __size) __THROW __attribute_malloc__ __wur;
                      ^~~~~~
/usr/include/stdlib.h:541:22: error: expected declaration specifiers or ‘...’ before ‘size_t’
 extern void *calloc (size_t __nmemb, size_t __size)
                      ^~~~~~
/usr/include/stdlib.h:541:38: error: expected declaration specifiers or ‘...’ before ‘size_t’
 extern void *calloc (size_t __nmemb, size_t __size)
                                      ^~~~~~
/usr/include/stdlib.h:549:36: error: expected declaration specifiers or ‘...’ before ‘size_t’
 extern void *realloc (void *__ptr, size_t __size)
                                    ^~~~~~
In file included from /usr/include/stdlib.h:566:0,
                 from ../src/Clase7_ej2.c:13:
/usr/include/alloca.h:32:22: error: expected declaration specifiers or ‘...’ before ‘size_t’
 extern void *alloca (size_t __size) __THROW;
                      ^~~~~~
In file included from ../src/Clase7_ej2.c:13:0:
/usr/include/stdlib.h:572:22: error: expected declaration specifiers or ‘...’ before ‘size_t’
 extern void *valloc (size_t __size) __THROW __attribute_malloc__ __wur;
                      ^~~~~~
/usr/include/stdlib.h:577:45: error: expected declaration specifiers or ‘...’ before ‘size_t’
 extern int posix_memalign (void **__memptr, size_t __alignment, size_t __size)
                                             ^~~~~~
/usr/include/stdlib.h:577:65: error: expected declaration specifiers or ‘...’ before ‘size_t’
 extern int posix_memalign (void **__memptr, size_t __alignment, size_t __size)
                                                                 ^~~~~~
/usr/include/stdlib.h:583:29: error: expected declaration specifiers or ‘...’ before ‘size_t’
 extern void *aligned_alloc (size_t __alignment, size_t __size)
                             ^~~~~~
/usr/include/stdlib.h:583:49: error: expected declaration specifiers or ‘...’ before ‘size_t’
 extern void *aligned_alloc (size_t __alignment, size_t __size)
                                                 ^~~~~~
/usr/include/stdlib.h:818:9: error: expected declaration specifiers or ‘...’ before ‘size_t’
         size_t __nmemb, size_t __size, __compar_fn_t __compar)
         ^~~~~~
/usr/include/stdlib.h:818:25: error: expected declaration specifiers or ‘...’ before ‘size_t’
         size_t __nmemb, size_t __size, __compar_fn_t __compar)
                         ^~~~~~
/usr/include/stdlib.h:827:34: error: expected declaration specifiers or ‘...’ before ‘size_t’
 extern void qsort (void *__base, size_t __nmemb, size_t __size,
                                  ^~~~~~
/usr/include/stdlib.h:827:50: error: expected declaration specifiers or ‘...’ before ‘size_t’
 extern void qsort (void *__base, size_t __nmemb, size_t __size,
                                                  ^~~~~~
/usr/include/stdlib.h:901:6: error: expected declaration specifiers or ‘...’ before ‘size_t’
      size_t __len) __THROW __nonnull ((3, 4, 5));
      ^~~~~~
/usr/include/stdlib.h:904:6: error: expected declaration specifiers or ‘...’ before ‘size_t’
      size_t __len) __THROW __nonnull ((3, 4, 5));
      ^~~~~~
/usr/include/stdlib.h:908:31: error: expected declaration specifiers or ‘...’ before ‘size_t’
       char *__restrict __buf, size_t __len)
                               ^~~~~~
/usr/include/stdlib.h:912:31: error: expected declaration specifiers or ‘...’ before ‘size_t’
       char *__restrict __buf, size_t __len)
                               ^~~~~~
/usr/include/stdlib.h:919:36: error: expected declaration specifiers or ‘...’ before ‘size_t’
 extern int mblen (const char *__s, size_t __n) __THROW;
                                    ^~~~~~
/usr/include/stdlib.h:923:34: error: expected declaration specifiers or ‘...’ before ‘size_t’
      const char *__restrict __s, size_t __n) __THROW;
                                  ^~~~~~
/usr/include/stdlib.h:930:15: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘mbstowcs’
 extern size_t mbstowcs (wchar_t *__restrict  __pwcs,
               ^~~~~~~~
/usr/include/stdlib.h:933:15: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘wcstombs’
 extern size_t wcstombs (char *__restrict __s,
               ^~~~~~~~
make: *** [src/Clase7_ej2.o] Error 1
"make all" terminated with exit code 2. Build might be incomplete.

22:14:55 Build Failed. 46 errors, 0 warnings. (took 601ms)

